--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
 			"parallel-lint . --exclude vendor --exclude node_modules -e php,inc",
 			"phpcs -p -s",
 			"minus-x check ."
-		]
+		],
+		"phan": "phan -d . --long-progress-bar"
 	}
 }
